# heir

./: index.html  index.xml  tmp.mlir
bazel/: import_llvm.bzl
blog/: index.xml
blog/_print/: index.html
community/: index.html
docs/: index.html  index.xml
docs/contributing/: index.html
docs/design/: index.html
docs/design/secret/: index.html
docs/design/simd/: index.html
docs/development/: index.html
docs/dialects/: index.html
docs/getting_started/: index.html
docs/passes/: index.html
docs/pipelines/: index.html
docs/tutorials/: index.html
lib/Analysis/SecretnessAnalysis/: SecretnessAnalysis.cpp  SecretnessAnalysis.h
lib/Dialect/SCFExt/: CMakeLists.txt
lib/Dialect/SCFExt/IR/: BUILD  CMakeLists.txt  SCFExtDialect.cpp  SCFExtDialect.h  SCFExtDialect.td  SCFExtOps.h  SCFExtOps.td
lib/Transforms/ConvertIfToSelect/: BUILD  ConvertIfToSelect.cpp
lib/Transforms/ConvertSecretWhileToStaticFor/: ConvertSecretWhileToStaticFor.cpp  ConvertSecretWhileToStaticFor.td
lib/Transforms/IntegerRangeTest/: BUILD  IntegerRangeTest.cpp  IntegerRangeTest.h  IntegerRangeTest.td
search/: index.html
tests/convert_if_to_select/: expected_outputs.mlir  non_secret_conditionals.mlir  tmp.mlir
tests/convert_if_to_select/check_error_msgs/: invalid_conditionals.mlir
tests/convert_secret_while_to_static_for/: invalid_while_loop.mlir
tests/data-oblivious/boyer-moore-search/: boyer-moore-search-do.mlir  boyer-moore-search.mlir
tests/scf_ext/: cond_br.mlir  range.mlir  scf_break.mlir  test.mlir  tmp.mlir
tools/: BUILD  heir-opt.cpp
(+44 files in other folders)
